Fix for bug: [#8274] Particle System cannot be persuaded to recalculate -The exact time for a particle being unborn or alive needed some adjusting